# loch

./: .gitignore  LICENSE  README.md  WHITEPAPER.md  _kernels.py  demo.py  environment.yaml  loch.py  pyproject.toml  test.py  water.py
.github/workflows/: devel.yaml  main.yaml  pr.yaml
actions/: update_recipe.py  upload_package.py
examples/: README.md
examples/bpti/: README.md  bpti.py  vmd.tcl
examples/scytalone/: BSSsetup.ipynb  README.md  sd.py  vmd.tcl
examples/scytalone-dehydratase/: BSSsetup.ipynb
examples/scytalone-dehydratase/inputs/: lig1.sdf  lig3.sdf
examples/scytalone-dehydratase/outputs/: 3STD-lig1.bss  equilibrated.prm7
examples/scytalone/inputs/: lig2.sdf
examples/scytalone/outputs/: equilibrated.rst7
examples/water/: README.md  water.py
recipes/loch/: template.yaml
src/loch/: __init__.py  _kernels.py  _sampler.py  _utils.py
tests/: conftest.py  test_energy.py
