[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "loch"
authors = [
    { name = "Lester Hedges", email = "lester@openbiosim.org" },
]
description = "An open-source engine for Grand-Canonical Monte Carlo (GCMC) water sampling."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]

[tool.setuptools]
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/OpenBioSim/loch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/loch/_version.py"
