[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "loch"
authors = [
    { name = "Lester Hedges", email = "lester@openbiosim.org" },
]
description = "An open-source engine for Grand-Canonical Monte Carlo (GCMC) water sampling."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]

[tool.setuptools]
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/OpenBioSim/loch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/ghostly/_version.py"
